[package]
authors = ["Cheng JIANG <jiang.cheng@vip.163.com>"]
edition = "2018"
name    = "actix-redis"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix     = "0.10.0"
backoff   = "0.2.1"
bb8-redis = "0.5.0"
log       = "0.4.11"
