[package]
authors     = ["Cheng JIANG <jiang.cheng@vip.163.com>"]
description = "Redis Actor"
edition     = "2018"
license     = "MIT"
name        = "redis-actor"
version     = "0.1.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix     = "0.9.0"
backoff   = "0.2.1"
bb8-redis = "0.5.0"
log       = "0.4.11"
serde = "1.0.117"
serde_json = "1.0.59"
