[package]
authors     = ["Cheng JIANG <jiang.cheng@vip.163.com>"]
description = "Redis Actor"
edition     = "2018"
license     = "MIT"
name        = "redis-actor"
version     = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix     = "0.9.0"
backoff   = "0.2.1"
bb8-redis = "0.7.0"
log       = "0.4.11"
